Fixing some aligning, calling it for now

--- a/kifi-backend/modules/shoebox/angular/src/keeps/keeps.styl
+++ b/kifi-backend/modules/shoebox/angular/src/keeps/keeps.styl
@@ -110,7 +110,7 @@ maxWidthForNarrowKeep = keepCardMaxWidth + 2 * (keepSidePad + appSidePad1) - 1 /
     .kf-keep-header
       border-bottom: 0
       margin: 0px -20px
-      margin-bottom: 10px
+      margin-bottom: 6px
       height: 30px
 
 
